[package]
edition = "2021"
name = "mru"
version = "0.1.0"

[dependencies]
axum = {version = "0.7.5", features = ["http2"]}
chrono = "0.4.38"
dotenv = "0.15"
log = "0.4"
serde = {version = "1", features = ["derive"]}
sqlx = {version = "0.7", features = ["mysql", "runtime-tokio", "tls-rustls"]}
tokio = {version = "1.38", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.118"