[package]
authors = ["ru"]
edition = "2021"
name = "mru"
version = "0.1.0"

[dependencies]
axum = {version = "0.7.5", features = ["http2"]}
chrono = "0.4.38"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.118"
sqlx = {version = "0.7", features = ["mysql", "runtime-tokio", "tls-rustls"]}
tokio = {version = "1.38", features = ["full"]}
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3"

[dev-dependencies]
serial_test = "3.1.1"
